# mas_domestic_robotics

mdr_planning/mdr_actions/mdr_perception_actions/mdr_look_at_action/: CMakeLists.txt  README.md  package.xml  setup.py
mdr_planning/mdr_actions/mdr_perception_actions/mdr_look_at_action/ros/action/: LookAt.action
mdr_planning/mdr_actions/mdr_perception_actions/mdr_look_at_action/ros/launch/: look_at.launch  look_at_client.launch  look_at_test.launch
mdr_planning/mdr_actions/mdr_perception_actions/mdr_look_at_action/ros/scripts/: look_at_action  look_at_action_client_test  look_at_client
mdr_planning/mdr_actions/mdr_perception_actions/mdr_look_at_action/ros/src/mdr_look_at_action/: action_states.py
mdr_speech/mdr_speech_recognition/: setup.py
mdr_speech/mdr_speech_recognition/common/src/SpeechRecognition/: KaldiRecognizer.py
mdr_speech/mdr_speech_recognition/ros/scripts/: kaldi_speech_recognition_node
mdr_speech/mdr_speech_recognition/ros/src/mdr_speech_recognition/: kaldi_speech_recognizer.py
