<?xml version="1.0"?>
<package>
  <name>mdr_look_at_action</name>
  <version>1.0.0</version>
  <description>An action for turning head to a specific location</description>

  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>
  <author email="roberto.cai@smail.inf.h-brs.de">Roberto Cai</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>actionlib</build_depend>

  <build_depend>mcr_perception_msgs</build_depend>
  <build_depend>mas_perception_libs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>mcr_perception_msgs</run_depend>
  <run_depend>mcr_states</run_depend>
  <run_depend>mcr_dynamic_reconfigure_client</run_depend>
  <run_depend>mdr_object_recognition</run_depend>

  <export></export>
</package>
